<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:theme="@style/MyToolBar"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/nav_header_bg">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            ads:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@id/ib_back"
            android:ellipsize="marquee"
            android:fontFamily="serif"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/icon" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:background="#D6D5D5" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:background="#D6D5D5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:text="@string/version" />

                <TextView
                    android:id="@+id/version_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/v"
                    android:padding="10dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/app_name" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>